Add compatibility to Java 8